...
        SizedBox(height: 30),
        TextButton(
          style: TextButton.styleFrom(
              backgroundColor: Colors.teal,
              primary: Colors.black,
              padding: EdgeInsets.symmetric(horizontal: 0, vertical: 60)),
          child: Text("Postear", style: TextStyle(fontSize: 30)),
          onPressed: () {
            Navigator.of(context)
                .push(MaterialPageRoute<void>(builder: (BuildContext context) {
              return Scaffold(
                appBar: AppBar(
                  leading: Icon(Icons.masks, size: 50),
...
